# event_organization

./: .gitignore  alembic.ini  pyproject.toml
event_organization/: config.py  database.py
event_organization/db/: exceptions.py  models.py
event_organization/db/data_access_objects/: base.py  dao.py
event_organization/migration/: env.py
event_organization/migration/versions/: 77271e26262f_add_all_tables.py  86fc2302f33c_delete_schedule_table.py  b52214a04659_change_date_type.py  bda8ab57925c_add_schedule_table.py  df5c11aa3808_initial_revision.py  efbac7da0e2a_add_new_fields.py
tests/: bot_test.py  conftest.py  event_test.py  general_test.py  notification_test.py  user_test.py
